# spec-data-lake-demo

./: .gitignore  DEMO_NOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: __init__.py  app.py  state.json
dashboard/static/: app.js  style.css
dashboard/templates/: index.html
data_lake/dtcs/: es-pcm-2024-001.json  fnv-bms-7842.json  fnv-eps-4521.json
data_lake/metadata/: registry.json
data_lake/parameters/: fnv-bms-7842.json  fnv-eps-4521.json
data_lake/signals/: es-pcm-2024-001.json  fnv-bms-7842.json  fnv-eps-4521.json
data_lake/states/: es-pcm-2024-001.json
docs/: IMPLEMENTATION_PLAN.md  flowchart.html
jira/: __init__.py  client.py  stories.py  webhook.py
pipeline/: __init__.py  classify.py  cli.py  devin_session.py  extract.py  ingest.py  integrate.py  models.py  orchestrator.py  repo_ingest.py  structure.py  validate.py
scripts/: generate_demo_pdf.py  generate_demo_pdf_bms.py  generate_diagrams.py  generate_excel.py
source_documents/excel/: system_requirements.xlsx  test_parameters.xlsx
source_documents/pdf_specs/: pcm_power_modes.extracted.json  pcm_power_modes.md  transmission_shift_logic.extracted.json  transmission_shift_logic.md
source_documents/word_docs/: can_signal_catalog.extracted.json  can_signal_catalog.md  diagnostic_dtc_matrix.extracted.json  diagnostic_dtc_matrix.md
tests/: conftest.py  test_classify.py  test_devin_session.py  test_pipeline.py  test_structure.py
