[project]
name = "spec-data-lake-demo"
version = "0.1.0"
description = "Continuous ingestion of unstructured automotive specs into a structured data lake"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "pdfplumber>=0.11.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-openpyxl>=3.1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["scripts/", "data_lake/"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["pipeline", "dashboard", "jira"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "reportlab>=4.5.1",
]
